build: 完善 Cargo.toml 项目配置
- 添加项目描述、仓库地址和 MIT 许可证信息

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "logthis"
 version = "0.1.0"
 edition = "2021"
+description = "A simple, beautiful, and easy-to-use logging library for Rust."
+repository = "https://github.com/Anglebase/logthis.git"
+license = "MIT"
 
 [dependencies]
 chrono = "0.4.39"
